# bear

./: .gitignore  README.md  README_CANISTERS.md  airdrop.mo  dfx.json  package.json  sns_init.json
.dfx/local/: wallets.json
.dfx/network/local/: network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: topology.json
.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/afaae1e3a02bd8ec832ab318fa2ef257e7ab791b06d8c4da04488deddef3339c/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/f3e0a9711469429c3d961cd911fea7495e3919476b8d5de66cba203f05d9a734/: states_metadata.pbuf
.github/: copilot-instructions.md
_archive_json_20250831/: asset_manifest_www_assets.json  dfx_web.json  dfx_web_project.json  package_project.json
airdrop/: Cargo.toml  airdrop.did  lib.rs
bear-claim-canister/: Cargo.toml  README.md  claim.did  dfx.json  optimized_bear_claim.wasm
bear-claim-canister/.dfx/network/local/: network-id
bear-claim-canister/src/: lib.rs
project/: constitution.md  sns_config.json  sns_init.json
project/scripts/: airdrop.js  generate_proposal.sh  submit_proposal.sh
project/src/www/assets/: index.html
scripts/: submitProposal.js
(+22 files in other folders)
