[package]
name = "bear-claim-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
candid = "0.10.17"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1"
once_cell = "1"

# Optional: swap to stable-structures later if you outgrow single-cell state
# ic-stable-structures = "0.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
